--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -134,7 +134,8 @@
     "POOL_MODE_FAILOVER": "Failover (Primary/Fallback)",
     "POOL_MODE_DUAL": "Dual Pool",
     "POOL_BALANCE": "Pool Balance",
-    "POOL_BALANCE_HINT": "Distributes jobs between the primary and secondary pool, e.g., 70/30."
+    "POOL_BALANCE_HINT": "Distributes jobs between the primary and secondary pool, e.g., 70/30.",
+    "STRATUM": "Stratum Settings"
   },
   "SYSTEM": {
     "TITLE": "System Information",
