--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -64,7 +64,7 @@
     "HASHRATE_10M": "Hashrate (10 m)",
     "HASHRATE_1H": "Hashrate (1 h)",
     "HASHRATE_1D": "Hashrate (1 d)",
-    "DUAL_POOL_BALANCE_WITH_STATUS": "Dual Pool {{primary}}/{{secondary}} ({{connected}}/2 online)"
+    "SHARE_TOO_SMALL": "Share for this pool too small!"
   },
   "PERFORMANCE": {
     "TITLE": "Performance",
