--- a/main/http_server/axe-os/src/assets/i18n/es.json
+++ b/main/http_server/axe-os/src/assets/i18n/es.json
@@ -64,7 +64,7 @@
     "HASHRATE_10M": "Hashrate (10 min)",
     "HASHRATE_1H": "Hashrate (1 h)",
     "HASHRATE_1D": "Hashrate (1 d)",
-    "DUAL_POOL_BALANCE_WITH_STATUS": "Pool dual {{primary}}/{{secondary}} ({{connected}}/2 en línea)"
+    "SHARE_TOO_SMALL": "Porcentaje para este pool demasiado bajo!"
   },
   "PERFORMANCE": {
     "TITLE": "Rendimiento",
