--- a/main/http_server/axe-os/src/assets/i18n/fr.json
+++ b/main/http_server/axe-os/src/assets/i18n/fr.json
@@ -64,7 +64,7 @@
     "HASHRATE_10M": "Hashrate (10 min)",
     "HASHRATE_1H": "Hashrate (1 h)",
     "HASHRATE_1D": "Hashrate (1 j)",
-    "DUAL_POOL_BALANCE_WITH_STATUS": "Pool double {{primary}}/{{secondary}} ({{connected}}/2 en ligne)"
+    "SHARE_TOO_SMALL": "Pourcentage pour ce pool trop faible!"
   },
   "PERFORMANCE": {
     "TITLE": "Performance",
